removed dependency on parent project, and move towards a push button release