@@ -2,56 +2,191 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>Gruffalo</artifactId>
+  <groupId>com.outbrain.swinfra</groupId>  
   <packaging>jar</packaging>
   <name>Gruffalo</name>
   <version>0.16</version>
 
-  <parent>
-    <groupId>com.outbrain.swinfra</groupId>
-    <artifactId>outbrain-sw-infra</artifactId>
-    <version>0.2</version>
-  </parent>
+  <licenses>
+    <license>
+      <name>Apache License Version 2.0, January 2004</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <scm>
+    <connection>scm:git:ssh://git@github.com:outbrain/sw-infra.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com:outbrain/sw-infra.git</developerConnection>
+    <url>https://github.com/outbrain/sw-infra/</url>
+  </scm>
+
+  <organization>
+    <name>outbrain</name>
+    <url>http://www.outbrain.com</url>
+  </organization>
+
+  <developers>
+    <developer>
+      <name>Eran Harel</name>
+      <url>http://il.linkedin.com/pub/eran-harel/4/4a3/234/</url>
+      <email>eran@outbrain.com</email>
+    </developer>
+  </developers>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.compiler.source>1.7</java.compiler.source>
+    <java.compiler.target>1.7</java.compiler.target>
+
+    <org.springframework.version>4.0.7.RELEASE</org.springframework.version>
+  </properties>
+
+  <distributionManagement>
+    <!-- Temp Bintray repo -->
+    <repository>
+      <id>bintray-harel-eran-Ob1k-com.outbrain.swinfra</id>
+      <name>harel-eran-Ob1k-com.outbrain.swinfra</name>
+      <url>https://api.bintray.com/maven/harel-eran/Ob1k/com.outbrain.swinfra</url>
+    </repository>
+  </distributionManagement>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.1</version>
+      </plugin>
+
+      <plugin>
+        <artifactId>maven-scm-plugin</artifactId>
+        <version>1.9.2</version>
+        <configuration>
+          <tag>${project.artifactId}-${project.version}</tag>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>${java.compiler.source}</source>
+          <target>${java.compiler.target}</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.17</version>
+        <configuration>
+          <useFile>false</useFile>
+          <useSystemClassLoader>false</useSystemClassLoader>
+          <forkMode>once</forkMode>
+          <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=1024m</argLine>
+        </configuration>
+      </plugin>
+
+      <!-- TODO reconfigure for OS projects -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <svn-revision>${svn.revision}</svn-revision>
+              <timestamp>${maven.build.timestamp}</timestamp>
+            </manifestEntries>
+            <manifest>
+              <mainClass>${mainClass}</mainClass>
+              <addClasspath>${addClasspath}</addClasspath>
+            </manifest>
+          </archive>
+        </configuration>
+
+        <executions>
+          <execution>
+            <id>make-a-jar</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>make-a-test-jar</id>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.3</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+    </plugins>
+  </build>
 
   <dependencies>
 
     <dependency>
       <groupId>com.outbrain.swinfra</groupId>
-      <artifactId>MetricsLib</artifactId>
-      <version>0.1</version>
+      <artifactId>util-metrics</artifactId>
+      <version>0.2</version>
     </dependency>
 
     <dependency>
       <groupId>com.outbrain.swinfra</groupId>
-      <artifactId>ConfigAPI</artifactId>
-      <version>0.1</version>
+      <artifactId>util-config</artifactId>
+      <version>0.2</version>
     </dependency>
 
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
+      <version>4.0.23.Final</version>
     </dependency>
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
+      <version>2.2</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
+      <version>${org.springframework.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
+      <version>${org.springframework.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
+      <version>16.0.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
+      <version>3.1</version>
     </dependency>
-
     <dependency>
       <groupId>com.codahale.metrics</groupId>
       <artifactId>metrics-core</artifactId>
@@ -61,11 +196,15 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
+      <scope>provided</scope>
+      <version>1.2.17</version>
     </dependency>
 
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
+      <scope>test</scope>
+      <version>1.9.5</version>
     </dependency>
   </dependencies>
 </project>
